# vascular-reconstruction

./: .gitignore  LICENSE  README.md
code/: pyproject.toml
code/configs/: README.md  dataset_generation.example.json  imagecas_generation.json  model_single_case_v1.json  train_single_case_v1.json  train_single_case_v10.json  train_single_case_v11.json  train_single_case_v12.json  train_single_case_v13.json  train_single_case_v14.json  train_single_case_v2.json  train_single_case_v3.json  train_single_case_v4.json  train_single_case_v5.json  train_single_case_v6.json  train_single_case_v7.json  train_single_case_v8.json  train_single_case_v9.json
code/experiments/: README.md
code/scripts/: README.md  convert_imagecas_to_mesh.py  download_datasets.py  extract_centerline.py  generate_dataset.py  split_meshes.py  train.py  visualize_reconstruction.py
code/src/vascular_reconstruction/: __init__.py  config.py
code/src/vascular_reconstruction/data/: __init__.py  dataset.py  dataset_generation.py
code/src/vascular_reconstruction/data/adapters/: __init__.py  imagecas.py
code/src/vascular_reconstruction/evaluation/: __init__.py
code/src/vascular_reconstruction/models/: __init__.py  pinn_gs.py
code/src/vascular_reconstruction/rendering/: __init__.py  silhouette.py
code/src/vascular_reconstruction/simulation/: __init__.py  equations.py
code/src/vascular_reconstruction/training/: __init__.py  trainer.py
code/tests/: README.md  test_config.py  test_dataset.py  test_dataset_generation.py  test_trainer.py
